--- a/style.css
+++ b/style.css
@@ -135,4 +135,10 @@ img{
     #heading{
         font-size: 1.5rem;
     }
+
+    main{
+        padding:2rem 0rem;
+        max-width: none;
+    }
+
 }
